feat: Добавлен параметр статус для сообщений
